chore: release v1.2.1
