# services/backend/src/routes/v4/healthDepartments.schemas.js
@@ -1,0 +1,16 @@
+const { z } = require('../../middlewares/validateSchema');
+
+const storeSignedKeysSchema = z.object({
+  publicCertificate: z.string().max(8192),
+  signedPublicHDEKP: z.string().max(2048),
+  signedPublicHDSKP: z.string().max(2048),
+});
+
+const departmentIdParametersSchema = z.object({
+  departmentId: z.string().uuid(),
+});
+
+module.exports = {
+  storeSignedKeysSchema,
+  departmentIdParametersSchema,
+};
